[gd_scene load_steps=2 format=3 uid="uid://ef5k8qsi1n2v"]

[ext_resource type="Script" uid="uid://dhrkjsq6kf1er" path="res://entities/wire/wire.gd" id="1_mxbqt"]

[node name="Wire" type="Node2D"]
script = ExtResource("1_mxbqt")

[node name="WireLine" type="Line2D" parent="."]

[node name="StartConnection" type="Marker2D" parent="."]

[node name="EndConnection" type="Marker2D" parent="."]
